# jaarvis-bot

./: .gitignore  README.md  demo.sh  package.xml  setup.cfg  setup.py
jarvis_agent/: __init__.py  action_registry.py  agent_node.py  face_node.py  intent_parser.py  lidar_node.py  llm_nlp_node.py  llm_schema.py  motor_driver.py  mqtt_bridge.py  nlp_node.py  telemetry_logger.py  tts_helper.py  vision_node.py  voice_node.py  voice_utils.py
launch/: jarvis_full.launch.py  jarvis_full_robot.launch.py  jarvis_llm.launch.py  jarvis_robot.launch.py  jarvis_sim.launch.py  sensors.launch.py
